--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@ Sollte Essenswachstum exponentiell sein?
 Trennung von CSS in Layout und Erscheinungsbild
 Wenn Simulation fertig ist, kann man nicht weiter machen
 
+
+28.08.2019
+Margins und Paddings verbessert
+
 07.08.2019
 UI Anpassungen
 Tab Design vom Kontrollzentrum verbessert
