time_unit interval optimization

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+17.10.2019
+Time_unit-Interval ist 0 statt 1000/60
+Es wird nicht mehr jede time_unit visualisiert, sondern nur noch alle paar
+time_unit-visualisierungsinterval kann über parameters_container eingestellt werden
+
 16.10.2019
 Funktion für Energieverbrauch angepasst
 Neuer Parameter: size; Erhöht Wahrscheinlichkeit, Essen zu finden, erhöht aber Energieverbrauch
