--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+19.10.2019
+bugfix: statistics.clear()
+Energieverbrauch ist nur quadratisch abhängig von speed und kubisch abhängig von size (E = 1 / 2 * m * v²) 
+
 18.10.2019
 Anpassung von Parametern und Gewichten
 
