--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+20.10.2019
+English translation
+
 19.10.2019
 bugfix: statistics.clear()
 Energieverbrauch ist nur quadratisch abhängig von speed und kubisch abhängig von size (E = 1 / 2 * m * v²) 
