--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 English translation
 Adjustment of default parameters
 Replaced "X" with icon-cancel
+Bugfix: Reset function wouldn't update current_time_label
 
 19.10.2019
 bugfix: statistics.clear()
