--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 27.10.2019
+Improved layout
+Removed obsolete html and css
+
+26.10.2019
 Formula for energy consumption corrected
 Adjustment of default parameters
 
